# cut_the_bullshit

./: README.md  pyproject.toml  test.ipynb  test_batching.ipynb
src/: utils.py
src/data/: system_prompt.txt  system_prompt_no_bs.txt  user_prompts_coding_test.jsonl  user_prompts_coding_train.jsonl  user_prompts_paper.jsonl
src/data/outputs/test/: avg_resid_activations_minus_1756008951.676697.pt  avg_resid_activations_minus_final_1756008951.676697.pt  avg_resid_activations_minus_prompt_1756008951.676697.pt  avg_resid_activations_minus_thinking_1756008951.676697.pt  avg_resid_activations_plus_1756008951.676697.pt  avg_resid_activations_plus_final_1756008951.676697.pt  avg_resid_activations_plus_no_bs_1756008951.676697.pt  avg_resid_activations_plus_no_bs_final_1756008951.676697.pt  avg_resid_activations_plus_no_bs_prompt_1756008951.676697.pt  avg_resid_activations_plus_no_bs_thinking_1756008951.676697.pt  avg_resid_activations_plus_prompt_1756008951.676697.pt  avg_resid_activations_plus_thinking_1756008951.676697.pt  generations_1756008951.676697.csv  scored_generations_1756008951.676697.csv  scored_steered_generations_plus_all_layers_1756012719.90602.csv  steered_generations_plus_all_layers_1756012719.90602.csv
src/data/outputs/train/: avg_resid_activations_minus_1755985687.141758.pt  avg_resid_activations_minus_final_1755985687.141758.pt  avg_resid_activations_minus_prompt_1755985687.141758.pt  avg_resid_activations_minus_thinking_1755985687.141758.pt  (+14 more)
src/scripts/: get_activations.py  score_generations.py  simple_inference.py  steered_generation.py
(+54 files in other folders)
